--- a/src/QbiPy/tools/AIF_viewer/AIF_viewer.ui
+++ b/src/QbiPy/tools/AIF_viewer/AIF_viewer.ui
@@ -310,7 +310,7 @@
   <customwidget>
    <class>MplWidget</class>
    <extends>QWidget</extends>
-   <header>general/gui_tools/mplwidget.h</header>
+   <header>QbiPy/tools/mplwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
