--- a/src/QbiPy/tools/DCE_fit_viewer/DCE_fit_viewer.ui
+++ b/src/QbiPy/tools/DCE_fit_viewer/DCE_fit_viewer.ui
@@ -287,7 +287,6 @@
               <height>16777215</height>
              </size>
             </property>
-            <zorder>label_4</zorder>
            </widget>
           </item>
          </layout>
@@ -475,7 +474,7 @@
   <customwidget>
    <class>MplWidget</class>
    <extends>QWidget</extends>
-   <header>general/gui_tools/mplwidget.h</header>
+   <header>QbiPy/tools/mplwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
